--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,18 +21,22 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@types/js-cookie": "^3.0.4",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.5.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.277.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
