--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.1",
+    "react-intersection-observer": "^9.5.2",
     "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
