--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.1",
+    "@livekit/components-react": "^1.4.0",
+    "@livekit/components-styles": "^1.0.7",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -42,6 +44,8 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "js-cookie": "^3.0.5",
+    "livekit-client": "^1.15.1",
+    "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.277.0",
     "next": "13.4.19",
     "next-auth": "^4.23.2",
