--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.9.0",
     "@types/js-cookie": "^3.0.4",
     "@types/node": "20.6.0",
